--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "deploy": "publish",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "mocha test/**.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/neverendingqs/serverless-default-aws-resource-properties#readme",
   "devDependencies": {
-    "publish-me-maybe": "^1.0.0"
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
+    "publish-me-maybe": "^1.0.0",
+    "sinon": "^9.0.2"
   },
   "dependencies": {
     "lodash.merge": "^4.6.2"
