test - adding code coverage.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Set default properties a given CloudFormation resource should have based on type",
   "main": "index.js",
   "scripts": {
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "deploy": "publish",
-    "test": "mocha test/**.js"
+    "test": "nyc mocha test/**.js"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,12 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
+    "nyc": "^15.0.1",
     "publish-me-maybe": "^1.0.0",
     "sinon": "^9.0.2"
   },
   "dependencies": {
+    "coveralls": "^3.0.11",
     "lodash.merge": "^4.6.2"
   }
 }
