--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,16 @@ jobs:
     steps:
       - *attach_workspace
       - run: npm test
+      - persist_to_workspace:
+          root: *workspace
+          paths:
+            - "*"
+
+  coverage:
+    executor: node
+    steps:
+      - *attach_workspace
+      - run: npm run coverage
 
   deploy:
     executor: node
@@ -53,6 +63,9 @@ workflows:
       - test:
           requires:
             - build
+      - coverage:
+          requires:
+            - test
       - deploy:
           context: npm-publish
           requires:
