--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: neverendingqs/gh-action-node-update-deps@v1.2.1
+      - uses: neverendingqs/gh-action-node-update-deps@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
